upload with this

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
         </div>
       
       </div>
-      <!-- <div id="cta_btn" style="display: block;"><a href="#">登録はこちら</a></div> -->
+      <div id="cta_btn" style="display: block;"><a href="#">登録はこちら</a></div>
       <footer>
         <div class="left">
           <ul class="p-0">
