upload with this

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               <h5>モチベーションをアップさせたい</h5>
             </div>
           </div>
-          <div class="col-lg-6 col-md-6 video-iframe" data-aos="fade-left">
+          <div class="col-lg-6 col-md-6 video-iframe" data-aos="fade-up">
             <video controlslist="nodownload" muted autoplay loop playsinline>
               <source src="assets/images/intro-video.mp4" type="video/mp4">
             </video>
