upload with updated url

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- Most of the information is in the js file -->
     <div class="bottomMenu text-center">
       <div class="sample">
-        <a href="https://kamismax.kamisma.com/service2">サンプル動画は<br>こちら</a>
+        <a href="https://kamismax.kamisma.com/service2/">サンプル動画は<br>こちら</a>
       </div>
       <div class="register">
         <a href="https://kamismax.kamisma.com/login">会員登録は<br>こちら</a>
